GearsetPOC/force-app/main/default/objects/SalesforceMemberPhysicalCardRequest__x/SalesforceMemberPhysicalCardRequest__x.object-meta.xml
<CustomObject>
    <description>SalesforceMemberPhysicalCardRequest</description>
    <externalDataSource>ICLP</externalDataSource>
    <externalName>SalesforceMemberPhysicalCardRequest</externalName>
    <label>Member new card requests</label>
    <pluralLabel>Member new card requests</pluralLabel>
</CustomObject>