GearsetPOC/force-app/main/default/objects/SalesforceMemberPhysicalCardRequest__x/fields/FulfilledDate__c.field-meta.xml
<CustomField>
    <fullName>FulfilledDate__c</fullName>
    <description>FulfilledDate</description>
    <externalDeveloperName>FulfilledDate</externalDeveloperName>
    <label>Fulfilled date</label>
    <type>DateTime</type>
</CustomField>