GearsetPOC/force-app/main/default/objects/SalesforceMemberPhysicalCardRequest__x/fields/ReplacementReasonCode__c.field-meta.xml
<CustomField>
    <fullName>ReplacementReasonCode__c</fullName>
    <description>ReplacementReasonCode</description>
    <externalDeveloperName>ReplacementReasonCode</externalDeveloperName>
    <label>Replacement reason code</label>
    <length>128</length>
    <type>Text</type>
</CustomField>