GearsetPOC/force-app/main/default/objects/SalesforceMemberPhysicalCardRequest__x/fields/ReplacementReasonDescription__c.field-meta.xml
<CustomField>
    <fullName>ReplacementReasonDescription__c</fullName>
    <description>ReplacementReasonDescription</description>
    <externalDeveloperName>ReplacementReasonDescription</externalDeveloperName>
    <label>Replacement reason description</label>
    <length>128</length>
    <type>Text</type>
</CustomField>