GearsetPOC/force-app/main/default/objects/SalesforceMemberPhysicalCardRequest__x/fields/ReplacementReasonText__c.field-meta.xml
<CustomField>
    <fullName>ReplacementReasonText__c</fullName>
    <description>ReplacementReasonText</description>
    <externalDeveloperName>ReplacementReasonText</externalDeveloperName>
    <label>Replacement reason text</label>
    <length>128</length>
    <type>Text</type>
</CustomField>